if (MINGW)
    set(SPECIAL_OS_FILE osint_mingw.c)
elseif (CYGWIN)
    set(SPECIAL_OS_FILE osint_cygwin.c)
elseif (UNIX)
    set(SPECIAL_OS_FILE osint_linux.c)
else ()
    message(WARNING "Platform not recognized - can not build loadp2")
endif ()

if (DEFINED SPECIAL_OS_FILE)
    add_executable(loadp2 loadp2.c "${SPECIAL_OS_FILE}")
    install(TARGETS loadp2 DESTINATION bin)
endif ()
